Perkin-UAT/force-app/main/default/objects/PKI_Country__c/PKI_Country__c.object-meta.xml
<CustomObject>
    <description>object for storing values like country , territories and sub-territories</description>
    <label>PKI Country</label>
    <nameField>
        <label>PKI Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>