Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Country_ISO_Alpha_3__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Alpha_3__c</fullName>
    <label>Country ISO Alpha-3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>