Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>