Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/DefaultUserId_AES__c.field-meta.xml
<CustomField>
    <fullName>DefaultUserId_AES__c</fullName>
    <description>the Default userID for records when no owner is available (AES)</description>
    <inlineHelpText>the Default userID for records when no owner is available (AES)</inlineHelpText>
    <label>DefaultUserId_AES</label>
    <length>20</length>
    <type>Text</type>
</CustomField>