Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/DefaultUserId_LSDX__c.field-meta.xml
<CustomField>
    <fullName>DefaultUserId_LSDX__c</fullName>
    <description>Default user for Records when no owner is available (LSDX)</description>
    <inlineHelpText>Default user for Records when no owner is available (LSDX)</inlineHelpText>
    <label>DefaultUserId_LSDX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>