Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Global_Territory__c.field-meta.xml
<CustomField>
    <fullName>Global_Territory__c</fullName>
    <label>Global Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_022_Territory_Global</valueSetName>
    </valueSet>
</CustomField>