Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked/True, the Country/Territory is Inactive (but can still be available for being linked to)</description>
    <inlineHelpText>If Checked/True, the Country/Territory is Inactive (but can still be available for being linked to)</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>