Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Sub_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sub_Territory__c</fullName>
    <label>Sub Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_024_Territory_Sub</valueSetName>
    </valueSet>
</CustomField>