Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Super_Territory__c.field-meta.xml
<CustomField>
    <fullName>Super_Territory__c</fullName>
    <label>Super Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_021_Territory_Super</valueSetName>
    </valueSet>
</CustomField>