Perkin-UAT/force-app/main/default/objects/PKI_Country__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_023_Territory</valueSetName>
    </valueSet>
</CustomField>