Perkin-UAT/force-app/main/default/objects/PKI_Country__c/listViews/PKI_Countries_ALL.listView-meta.xml
<ListView>
    <fullName>PKI_Countries_ALL</fullName>
    <columns>Super_Territory__c</columns>
    <columns>Global_Territory__c</columns>
    <columns>Territory__c</columns>
    <columns>Sub_Territory__c</columns>
    <columns>NAME</columns>
    <columns>Country_ISO_Code__c</columns>
    <columns>Country_ISO_Alpha_2__c</columns>
    <columns>Country_ISO_Alpha_3__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Inactive__c</columns>
    <columns>FlagForUpdate__c</columns>
    <filterScope>Everything</filterScope>
    <label>PKI Countries (ALL)</label>
</ListView>